# PP

./: .gitignore
lab1/: ChangeLog.md  Main.hs  cabal.sandbox.config  lab1.cabal  task.txt
lab1/.cabal-sandbox/: add-source-timestamps
lab1/.cabal-sandbox/lib/x86_64-linux-ghc-8.0.2/clock-0.7.2-6ZjQ4liQAtMEQ8sxJKD0xY/System/: Clock.dyn_hi  Clock.hi
lab1/.cabal-sandbox/lib/x86_64-linux-ghc-8.0.2/random-1.1-9tceXaeYIMZ4JrKq20Egog/System/: Random.dyn_hi  Random.hi
lab1/.cabal-sandbox/share/doc/x86_64-linux-ghc-8.0.2/lab1-0.1.0.0/: LICENSE
lab1/.cabal-sandbox/x86_64-linux-ghc-8.0.2-packages.conf.d/: clock-0.7.2-6ZjQ4liQAtMEQ8sxJKD0xY.conf  package.cache  random-1.1-9tceXaeYIMZ4JrKq20Egog.conf
lab2/: main  main.c  perf.data  perf.data.old  predictor  predictor.c  res0.txt  run.sh
lab3/: .#main.c  lab3.cabal  main  main.c  stack.yaml
lab3/.stack-work/install/x86_64-linux/lts-9.13/8.0.2/flag-cache/: MonadRandom-0.5.1-6uvIhB08u1RHnyKFfb2cRN  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  random-1.1-9tceXaeYIMZ4JrKq20Egog  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  vector-0.12.0.1-692PQMDMB6pIQ1uGwefDcQ
lab3/c/: .#main.c  main  main.c
lab3/src/: Main.hs
lab3/src/Data/SIMD/: SIMD8.hs
lab4/: lab4.cabal  main  main.c  stack.yaml
lab4/.stack-work/install/x86_64-linux/lts-9.13/8.0.2/flag-cache/: clock-0.7.2-8dRNleB7rysIZAOReuhpZA  lab4-0.1.0.0  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve
lab4/src/: Main.hs
simd/: Main.hi  Main.hs
simd/Data/: SIMD.hi  SIMD.hs
simd/Data/SIMD/: SIMD4.hi  SIMD4.hs
